--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,12 @@
 __pycache__
 *.pyc
 
-# Exlude iati-schemas
+# Exclude virtual environment files
+.pyenv/*
+pyenv/*
+
+# Exclude iati-schemas
 iati-schemas/*
+
+# Exclude log files
+*.log
